# backend-takehome

./: .gitignore  README_CANDIDATE.md
.omc/sessions/: 8d4542a5-c613-4df0-9d7c-c2738b414317.json
api/: NOTES.md  alembic.ini  pyproject.toml  requirements.txt
api/.omc/sessions/: 8fe922eb-d753-4394-af04-d7b7869e0c01.json  9572da8a-5012-476f-a71e-0dd4036d2157.json
api/alembic/: env.py
api/alembic/versions/: 8e4e4eed1f0a_initial_schema.py
api/app/: database.py  db_models.py  main.py  models.py  queries.py  routes.py
api/tests/: conftest.py  test_endpoints.py
